______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 BETA 7:

* XINS/Java Server Framework:
  - Removed unused imports.
  - Set the log numbers in a sequential order.
  - Added missing tranlations for some logging messages.
  - Switched log numbers from 1XXX to 3XXX.

* XINS/Java Common Library:
  - Set the log numbers in the correct order.
  - Fixed missing translations.
  - Removed unused imports.
  - The MandatoryArgumentChecker also checks that the argument names are not
    null.
  - Added logging message with HTTP parameters and duration for the 
    HTTPServiceCaller.
  - Fixed some incorrect links in Javadoc.
  - Switched log numbers from 3XXX to 1XXX.

* XINS/Java Client Framework:
  - Removed unused imports.
  - Removed unused log numbers.
  - Added missing tranlations for some logging messages.
  - Fixed some incorrect links in Javadoc.

* Generation of specification documentation:
  - Added missing forward slash for the URL generated for broken links.

* Added copyright statement at the beginning of the java and xslt files.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 BETA 6:

* XINS/Java Server Framework:
  - Added tests for _GetSettings, _DisableFunction, _EnableFunction and
   _GetFunctionList meta functions.
  - Fixed some Checkstyle-reported issues, like missing Javadoc comments.

* XINS/Java Common Library:
  - Added the hashCode() and equals() method to the types Date and Timestamp.
  - Fixed the HTTPServiceCaller did not pass the arguments correctly when using
    the GET method.
  - Added TextUtils class.
  - Added tests for the ExpiryFolder and MandatoryArgumentChecker.
  - Fixed some Checkstyle-reported issues, like missing Javadoc comments.

* XINS/Java Client Framework:
  - Added more test using the AllInOne CAPI.
  - Fixed some Checkstyle-reported issues, like missing Javadoc comments.
  - Improved the logging.