@@ -60,6 +60,60 @@ public final class Library extends Object {
       return version.matches(PRODUCTION_RELEASE_PATTERN);
    }
 
+   /**
+    * Checks if the specified version is a more recent version as this version.
+    *
+    * @param buildVersion
+    *    the XINS version to check, cannot be <code>null</code>.
+    *
+    * @return
+    *    <code>true</code> is the given version is the same version or more 
+    *    recent, false is the given version is not a production released or is 
+    *    less recent or the current version is not a production released.
+    *
+    * @throws NullPointerException
+    *    if <code>version == null</code>.
+    */
+   static final boolean isMoreRecent(String buildVersion)
+   throws NullPointerException {
+      if (!buildVersion.matches(PRODUCTION_RELEASE_PATTERN) || 
+          isProductionRelease(getVersion())) {
+         return false;
+      }
+      if (buildVersion.equals(getVersion())) {
+         return true;
+      }
+      int buildFirstDot = buildVersion.indexOf('.');
+      int currentFirstDot = getVersion().indexOf('.');
+      int buildMajor = Integer.parseInt(buildVersion.substring(0, buildFirstDot));
+      int currentMajor = Integer.parseInt(getVersion().substring(0, currentFirstDot));
+      if (buildMajor < currentMajor) {
+         return false;
+      } else if (buildMajor > currentMajor) {
+         return true;
+      } else {
+         int buildSecondDot = buildVersion.indexOf('.', buildFirstDot + 1);
+         int currentSecondDot = getVersion().indexOf('.', currentFirstDot + 1);
+         int buildMinor = Integer.parseInt(buildVersion.substring(0, buildSecondDot));
+         int currentMinor = Integer.parseInt(getVersion().substring(0, currentSecondDot));
+         if (buildMinor < currentMinor) {
+            return false;
+         } else if (buildMinor > currentMinor) {
+            return true;
+         } else {
+            int buildThirdDot = buildVersion.indexOf('.', buildFirstDot + 1);
+            int currentThirdDot = getVersion().indexOf('.', currentFirstDot + 1);
+            int buildMinor2 = Integer.parseInt(buildVersion.substring(0, buildThirdDot));
+            int currentMinor2 = Integer.parseInt(getVersion().substring(0, currentThirdDot));
+            if (buildMinor2 < currentMinor2) {
+               return false;
+            } else {
+               return true;
+            }
+         }
+      }
+   }
+
 
    //-------------------------------------------------------------------------
    // Constructors
